bitsandbytes/bnb/tests/ui/bin_auto_len_target_has_directive.stderr
error: a field targeted by `#[bin(auto_len(...))]` cannot also carry a codec directive (`calc`/`map`/`write_with`/`parse_with`/`auto`/`if`/`count`/`ctx`/`temp`/`ignore`/`restore_position`); only positioning (`pad_*`/`align_*`) may accompany it
  --> tests/ui/bin_auto_len_target_has_directive.rs:13:5
   |
13 | /     #[bw(map = |h: &Hdr| h.clone())]
14 | |     hdr: Hdr,
   | |____________^
